Daily Commit - Fix Issue from github